--- a/overview/overview-preamble.tex
+++ b/overview/overview-preamble.tex
@@ -14,8 +14,9 @@
 \usepackage{amssymb,amsmath,amsthm}
 
 \setbeamertemplate{bibliography item}[text]
-\usepackage[natbib,style=alphabetic,maxbibnames=99]{biblatex}
+\usepackage[natbib,sorting=none,maxbibnames=99]{biblatex}
 \addbibresource{overview.bib}
+\addbibresource{crypto.bib}
 
 \usepackage[std,stdmaths,crypto,lncs]{libbib}
 
