Minor stylistic changes

--- a/spuriouslab/spuriouslab.tex
+++ b/spuriouslab/spuriouslab.tex
@@ -10,7 +10,7 @@
 \usepackage{csquotes}
 \usepackage{verbatim}
 
-\usepackage[natbib,style=alphabetic,maxbibnames=99,sorting=none]{biblatex}
+\usepackage[natbib,style=numeric-comp,maxbibnames=99]{biblatex}
 \addbibresource{spuriouslab.bib}
 
 \usepackage[lncs,crypto]{libbib}
@@ -18,7 +18,8 @@
 %\printanswers
 \pagestyle{plain}
 
-\title{May the (Brute) Force Be with You}
+\title{Lab: May the (Brute) Force Be with You}
+\subtitle{A lab to reflect on forcing solutions}
 \author{%
   Daniel Bosk\inst{1}\fnmsep\inst{2}
 }
@@ -67,9 +68,9 @@ If you have previously taken (or are currently taking) a course on
 cryptography, the material from that course covering classical cryptography is 
 enough.
 % XXX replace Swedish text with English counterpart
-Otherwise you are recommended to read \citetitle{Bosk2013itn} 
-\cite{Bosk2013itn} (in Swedish) or Chap.~1 in \citetitle{Stinson2006cta} by 
-\citet{Stinson2006cta}.
+Otherwise you are recommended to read 
+\citetitle{Bosk2013itn}~\cite{Bosk2013itn} (in Swedish) or Chap.~1 in 
+\citetitle{Stinson2006cta} by \citet{Stinson2006cta}.
 
 Finally, you should read about spurious keys and unicity distance.
 The recommended literature is Chap.~2 in~\cite{Stinson2006cta}.
