Adds WIP on MPC
Sugar beet auctions example remains to do.

--- a/overview/overview-content.tex
+++ b/overview/overview-content.tex
@@ -770,6 +770,115 @@
 \subsection{(Secure) Multi-Party Computation}
 
 \begin{frame}
+  \begin{example}[Yao's millionaires' problem]
+    \begin{itemize}
+      \item Two millionaires meet in the street.
+      \item They want to find out who is the richer.
+
+        \pause{}
+
+      \item However, they don't want to reveal how many millions they each 
+        have.
+    \end{itemize}
+  \end{example}
+\end{frame}
+
+\begin{frame}
+  \begin{block}{The idea}
+    \begin{itemize}
+      \uncover<1>{%
+      \item We have \(n\) participants \(P_1, \ldots, P_n\).
+      }
+      \uncover<2>{%
+      \item Each person has a \emph{secret} input value \(x_j\) for \(1\leq 
+          j\leq n\).
+      }
+      \uncover<3>{%
+      \item But they desperately want to know \(y = f(x_1, \ldots, x_n)\).
+      }
+    \end{itemize}
+  \end{block}
+%\end{frame}
+%\begin{frame}
+  \begin{figure}
+    \begin{tikzpicture}[->,auto,node distance=1.5cm,
+      thick,input node/.style={circle,draw},
+      func node/.style={rectangle,draw}]
+
+      \uncover<1,2,4>{%
+      \node[input node] (1) {$P_1$};
+      \node[input node] (2) [right of=1] {\ldots};
+      \node[input node] (3) [right of=2] {$P_n$};
+      }
+
+      \uncover<3,4>{%
+      \node[func node] (4) [below of=2] {$f$};
+
+      \node (5) [below of=4] {$f(x_1, \ldots, x_n) = y$};
+      }
+
+      \uncover<4>{%
+      \path[every node/.style={font=\small}]
+      (1) edge node [right] {$x_1$} (4)
+      (2) edge node {} (4)
+      (3) edge node [right] {$x_n$} (4)
+      (4) edge node {} (5);
+      }
+    \end{tikzpicture}
+  \end{figure}
+\end{frame}
+
+\begin{frame}
+  \begin{definition}[\Acl{MPC}, \acs{MPC}]
+    \begin{itemize}
+      \item \(n\) participants \(P_1, \ldots, P_n\).
+      \item \(n\) secret inputs \(x_1, \ldots, x_n\).
+
+        \pause{}
+
+      \item A protocol \(\pi\) is executed by the participants.
+      \item At the end of the protocol each participant learns \(y = f(x_1, 
+          \ldots, x_n)\).
+
+        \pause{}
+
+      \item The participants executing \(\pi\) should be \emph{equivalent} to 
+        giving \(x_1, \ldots, x_n\) to a trusted party \(T\) who computes 
+        \(f(x_1, \ldots, x_n) = y\) and returns \(y\) to each participant.
+    \end{itemize}
+  \end{definition}
+
+  \pause{}
+
+  \begin{block}{Note}
+    Each participant \(P_i\) learns no more about \(x_j\) (\(i\neq j\))
+    than what is revealed by \(y\).
+  \end{block}
+\end{frame}
+
+\begin{frame}
+  \begin{itemize}
+    \item In general this problem is solved.
+    \item We can construct protocols for arbitrary functions \(f\).
+
+      \pause{}
+
+    \item Efficiency varies though.
+    \item However, there are practically feasible protocols.
+
+      \pause{}
+
+    \item Sometimes we can use homomorphisms.
+    \item But we can construct rather complex functions too.
+  \end{itemize}
+\end{frame}
+
+\begin{frame}
+  \begin{example}[Sugar beet auctions\footfullcite{MPCgoesLive}]
+    \begin{itemize}
+      \item \dots
+    \end{itemize}
+  \end{example}
 \end{frame}
 
 \subsection{Zero-Knowledge Proofs of Knowledge}
