--- a/overview/overview-preamble.tex
+++ b/overview/overview-preamble.tex
@@ -16,6 +16,9 @@
 \usepackage[natbib,sorting=none,maxbibnames=99]{biblatex}
 \addbibresource{overview.bib}
 \addbibresource{crypto.bib}
+\addbibresource{mpc.bib}
 
-\usepackage[std,stdmaths,crypto,lncs]{libbib}
+\usepackage[std,stdmaths,crypto,mpc]{libbib}
 
+\usepackage{tikz}
+\usetikzlibrary{arrows}
