--- a/overview/overview-content.tex
+++ b/overview/overview-content.tex
@@ -211,15 +211,87 @@
   \end{exercise}
 \end{frame}
 
+\subsection{Security}
+
+\begin{frame}
+  \begin{definition}[Perfect secrecy~\footfullcite{ShannonSecrecy}]
+    \begin{itemize}
+      \item Cryptosystem \((\M, \C, \K, \E, \D)\).
+      \item Stochastic variables \(M, C\).
+      \item \emph{Perfect secrecy} if and only if \[\Pr(M = m\mid C = c) 
+          = \Pr(M = m)\] for all \(m\in \M\) and \(c\in \C\).
+    \end{itemize}
+  \end{definition}
+
+  \pause{}
+
+  \begin{block}{Note}
+    Equivalent to \(H(M\mid C) = H(M)\), i.e.\ ciphertext does not reveal 
+    anything about plaintext.
+  \end{block}
+\end{frame}
+
+\begin{frame}
+  \begin{theorem}[Shannon's theorem]
+    \begin{itemize}
+      \item Assume cryptosystem \((\M, \C, \K, \E, \D)\) such that \(|\K| 
+          = |\C| = |\M|\).
+
+        \pause{}
+
+      \item This provides perfect secrecy if and only if
+        \begin{enumerate}
+          \item every key \(k\in \K\) is used with equal probability 
+            \(1/|\K|\),
+          \item for every plaintext \(m\in \M\) and \(c\in \C\) there is 
+            a unique key such that \(\Enc[k]{m} = c\).
+        \end{enumerate}
+    \end{itemize}
+  \end{theorem}
+\end{frame}
+
+\begin{frame}
+  \begin{example}[One-time Pad]
+    \begin{itemize}
+      \item Let \(n\) be a positive integer.
+      \item Let \(\M = \C = \K = (\Z_2)^n\).
+
+        \pause{}
+
+      \item For each key \(k = (k_1, \ldots, k_n)\in \K\), plaintexts \(m 
+          = (m_1, \ldots, m_n)\in \M\) and ciphertexts \(c = (c_1, \ldots, 
+          c_n)\in \C\) we define
+        \[\Enc[k]{m} = (m_1 + k_1, \ldots, m_n + k_n)\]
+
+        \pause{}
+
+      \item We also define \(\DecOp = \EncOp\).
+
+        \pause{}
+
+      \item \(k\in \K\) must be chosen uniformly randomly for each encryption.
+    \end{itemize}
+  \end{example}
+\end{frame}
+
 \begin{frame}
   \begin{definition}[\Acl{PRP}, \acs{PRP}\footfullcite{KatzLindell-v1}]
     \begin{itemize}
       \item Let \(F\colon \{0,1\}^s\times \{0, 1\}^n\to \{0,1\}^n\).
+
+        \pause{}
+
       \item \(F\) is \iac{PRP} if
         \begin{enumerate}
           \item for any \(k\in \{0, 1\}^s\), \(F\) is a bijection;
+
+            \pause{}
+
           \item for any \(k\in \{0, 1\}^s\), we can \enquote{efficiently} 
             evaluate \(F_k(x)\);
+
+            \pause{}
+
           \item for all \enquote{efficient} distinguishers \(D\),
             \[\left|\Pr[D^{F_k}(1^n) = 1] - \Pr[D^{f_n}(1^n) = 1]\right| 
               < \epsilon(s)\] if we choose \(k\in \{0,1\}^s\) and the random 
