Adds example of sugar beet auctions

--- a/overview/overview-content.tex
+++ b/overview/overview-content.tex
@@ -948,7 +948,41 @@
 \begin{frame}
   \begin{example}[Sugar beet auctions\footfullcite{MPCgoesLive}]
     \begin{itemize}
-      \item \dots
+      \item Several thousand farmers produce sugar beets.
+      \item These are sold to the monopoly Danisco, the sugar producer.
+
+        \pause{}
+
+      \item Contracts are allocated via a nation-wide exchange, a double 
+        auction.
+
+      \item A double auction contains multiple sellers and multiple buyers.
+
+      \item The purpose is to find the \emph{market clearing price}.
+
+    \end{itemize}
+  \end{example}
+\end{frame}
+
+\begin{frame}
+  \begin{example}[Sugar beet auctions, continued]
+    \begin{itemize}
+      \item Each buyer places a bid specifying how much he is willing to buy 
+        \emph{at each potential price}.
+
+      \item Each seller says how much they are willing to sell at each given 
+        price.
+
+        \pause{}
+
+      \item The auctioneer computes the total supply and demand for each price.
+
+      \item We want to find where supply equals demand.
+
+        \pause{}
+
+      \item When done, anyone who specified non-zero for this price may trade 
+        at this price.
     \end{itemize}
   \end{example}
 \end{frame}
