Adds initial example for zero-knowledge proofs

--- a/overview/overview-content.tex
+++ b/overview/overview-content.tex
@@ -993,6 +993,26 @@
 \subsection{Zero-Knowledge Proofs of Knowledge}
 
 \begin{frame}
+  \begin{example}[Age limits]
+    \begin{itemize}
+      \item We want to go see a film in cinema.
+      \item We look very young so they want to have proof of our age.
+
+        \pause{}
+
+      \item Show physical ID, reveals exact date of birth.
+    \end{itemize}
+  \end{example}
+
+  \pause{}
+
+  \begin{exercise}
+    \begin{itemize}
+      \item That's a bit unnecessary, right?
+      \item What do they actually only need to know?
+      \item How can we achieve that?
+    \end{itemize}
+  \end{exercise}
 \end{frame}
 
 
