--- a/spuriouslab/spuriouslab.bib
+++ b/spuriouslab/spuriouslab.bib
@@ -1,8 +1,8 @@
 @unpublished{Bosk2013itn,
   author={Bosk, Daniel},
   title={En introduktion till kryptografi},
-  year={2013},
-  URL={http://ver.miun.se/courses/security/compendii/introcrypt.pdf},
+  year={2015},
+  URL={https://github.com/dbosk/introkrypt/releases/download/v1.0/introkrypt.pdf},
 }
 
 @unpublished{kthtalteori,
