Adds note on difference with steganography

--- a/overview/overview-content.tex
+++ b/overview/overview-content.tex
@@ -51,6 +51,12 @@
 
     \item The area has been around for ages.
 
+      \pause{}
+
+    \item We should not confuse it with \emph{steganography}.
+    \item Steganography concerns hiding a message's \emph{existence}.
+    \item Cryptography concerns hiding a message's \emph{contents}.
+
   \end{itemize}
 \end{frame}
 
