--- a/sidechannels/overview.bib
+++ b/sidechannels/overview.bib
@@ -40,3 +40,12 @@
   volume={2001},
   year={2001}
 }
+
+@inproceedings{FlatPanelEmissions,
+  title={Electromagnetic eavesdropping risks of flat-panel displays},
+  author={Kuhn, Markus G},
+  booktitle={Privacy Enhancing Technologies},
+  pages={88--107},
+  year={2004},
+  organization={Springer}
+}
