Updates libbib to bibsp

--- a/overview/overview-preamble.tex
+++ b/overview/overview-preamble.tex
@@ -18,7 +18,7 @@
 \addbibresource{crypto.bib}
 \addbibresource{mpc.bib}
 
-\usepackage[std,stdmaths,crypto,mpc]{libbib}
+\usepackage[std,math,crypto,mpc]{libbib}
 
 \usepackage{tikz}
 \usetikzlibrary{arrows}
