--- a/spuriouslab/spuriouslab.tex
+++ b/spuriouslab/spuriouslab.tex
@@ -13,7 +13,7 @@
 \usepackage[natbib,style=numeric-comp,maxbibnames=99]{biblatex}
 \addbibresource{spuriouslab.bib}
 
-\usepackage[lncs,crypto]{libbib}
+\usepackage[lncs,crypto]{bibsp}
 
 %\printanswers
 \pagestyle{plain}
