--- a/bitcoin/bitcoin.tex
+++ b/bitcoin/bitcoin.tex
@@ -18,7 +18,7 @@
 \usepackage[natbib,style=alphabetic,maxbibnames=99]{biblatex}
 \addbibresource{bitcoin.bib}
 
-\usepackage[std]{libbib}
+\usepackage[std]{bibsp}
 
 \mode<presentation>{%
   \usetheme{Frankfurt}
