--- a/overview/overview-slides.tex
+++ b/overview/overview-slides.tex
@@ -1,6 +1,6 @@
 %\documentclass[ignoreframetext,handout]{beamer}
 \documentclass[ignoreframetext]{beamer}
-\input{overview-preamble.tex}
+\input{preamble.tex}
 
 \ProvideDocumentEnvironment{exercise}{o}{%
   \setbeamercolor{block body}{bg=yellow!30,fg=black}
@@ -12,6 +12,16 @@
   }
 }{%
   \end{block}
+}
+
+\ProvideDocumentEnvironment{remark}{o}{%
+  \IfValueTF{#1}{%
+    \begin{alertblock}{Remark: #1}
+  }{%
+    \begin{alertblock}{Remark}
+  }
+}{%
+  \end{alertblock}
 }
 
 \mode<presentation>{%
@@ -39,6 +49,6 @@
 
 \begin{document}
 \mode<all>
-\input{overview-content.tex}
+\input{contents.tex}
 \mode*
 \end{document}
