--- a/overview/overview-slides.tex
+++ b/overview/overview-slides.tex
@@ -14,6 +14,16 @@
   \end{block}
 }
 
+\ProvideDocumentEnvironment{idea}{o}{%
+  \IfValueTF{#1}{%
+    \begin{block}{Idea: #1}
+  }{%
+    \begin{block}{Idea}
+  }
+}{%
+  \end{block}
+}
+
 \ProvideDocumentEnvironment{remark}{o}{%
   \IfValueTF{#1}{%
     \begin{alertblock}{Remark: #1}
